[tool.poetry]
name = "pl_py_utils"
version = "0.1.0"
description = ""
authors = ["Patrick Lurch <plurch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
psutil = ="^5.9.5"
numba = "^0.57.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
