[tool.poetry]
name = "pl_py_utils"
version = "1.1.0"
description = ""
authors = ["Patrick Lurch <plurch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26"
psutil = "^5.9.5"
pytest = "^7.4.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
