[project]
name = "pl_py_utils"
version = "1.2.0"
description = "PL Python utilities package"
readme = "README.md"
authors = [
    { name = "Patrick Lurch", email = "plurch@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "psutil>=5.9.5",
    "requests>=2.31.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
dev = ["pytest>=7.4.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
